force-app/main/default/objects/Commission_Split__c/Commission_Split__c.object-meta.xml
<CustomObject>
    <label>Commission Split</label>
    <nameField>
        <displayFormat>SPLIT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>