force-app/main/default/objects/Commission_Split__c/fields/Closing_Report__c.field-meta.xml
<CustomField>
    <fullName>Closing_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>TR1__Closing_Report__c</referenceTo>
    <relationshipLabel>Commission Splits</relationshipLabel>
    <relationshipName>Commission_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>