force-app/main/default/objects/Commission_Split__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>sirenum__Placement__c</referenceTo>
    <relationshipLabel>Commission Splits</relationshipLabel>
    <relationshipName>Commission_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>