force-app/main/default/objects/Commission_Split__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Commission Splits</relationshipLabel>
    <relationshipName>Commission_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>